--- a/frontend/src/components/BlogPage/TopicDetails.module.css
+++ b/frontend/src/components/BlogPage/TopicDetails.module.css
@@ -1,5 +1,5 @@
-img {
-   margin-top: 4%;
-   width: 100%;
-   margin-bottom: 5%;
+.topicdetails-blog img {
+  margin-top: 4%;
+  width: 100%;
+  margin-bottom: 5%;
 }
