--- a/frontend/src/pages/style.css
+++ b/frontend/src/pages/style.css
@@ -1,3 +1,27 @@
 .home-page {
   --bs-gutter-x: 0 !important;
 }
+
+.form-input {
+  height: 38pt;
+  background: rgb(255, 255, 255);
+  border: 1px solid rgb(229, 232, 237);
+  box-sizing: border-box;
+  border-radius: 3px;
+  margin-bottom: 8px;
+  font-size: 16px !important;
+  padding: 12px !important;
+  color: rgb(91, 105, 135);
+}
+
+.textarea-input {
+  height: 98px;
+  background: rgb(255, 255, 255);
+  border: 1px solid rgb(229, 232, 237);
+  box-sizing: border-box;
+  border-radius: 3px;
+  margin-bottom: 8px;
+  font-size: 16px !important;
+  padding: 12px !important;
+  color: rgb(91, 105, 135);
+}
